--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     	<meta charset="utf-8">
-    	<meta name="keywords" content="cookies, c, monster, Sesame Street">
-    	<meta name="description" content="I love cookies big and small, I love cookies I love them all.">
+    	<meta name="keywords" content="self, petrus, layarda, surfer, surf, surfing">
+    	<meta name="description" content="Surf rider">
 
-		<title>Cookie Monster</title>
+		<title>Petrus Layarda</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
